Temporarly disable custom fonts

--- a/Final_Pres.org
+++ b/Final_Pres.org
@@ -72,8 +72,8 @@
 
 *** Configure fonts
 #+BEAMER_HEADER: \setmathfont{Fira Math}
-#+BEAMER_HEADER: \setmathfont{DejaVu Math TeX Gyre}[range={\vysmwhtcircle,\times,\vdots}]
-#+BEAMER_HEADER: \setmonofont{Hack}
+/#+BEAMER_HEADER: \setmathfont{DejaVu Math TeX Gyre}[range={\vysmwhtcircle,\times,\vdots}]
+/#+BEAMER_HEADER: \setmonofont{Hack}
 
 *** Environments
 **** Angled Small Vector
