--- a/Proposal/Proposal.org
+++ b/Proposal/Proposal.org
@@ -9,7 +9,7 @@
 ** Emacs Config
 #+startup: show2levels
 
-#+begin_src emacs-lisp :exports results :results none :eval export
+#+BEGIN_SRC emacs-lisp :exports none :eval always
   (make-variable-buffer-local 'org-latex-title-command)
   (setq org-latex-listings t)
   ;; export snippet translations
