--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -128,11 +128,53 @@ The _identity_ of an operation $\star$ and set $G$ is some value $\symbfit{i} \i
 
 ** Matrix Inverse
 
+*** Problem
+
+- Matrix multiplication is generally not commutative ($AB \neq BA$).
+
 ** Uses
+
+\begin{align*}
+    3x  + 2y & = 2 \\
+    -7x - 5y & = 4 \\
+    \begin{bmatrix} 3 & 2 \\ -7 & -5 \end{bmatrix}
+    \begin{bmatrix} x \\ y \end{bmatrix}
+    & = \begin{bmatrix} 2 \\ 4 \end{bmatrix} \\
+    \begin{bmatrix} 3 & 2 \\ -7 & -5 \end{bmatrix}^{-1}
+    \begin{bmatrix} 3 & 2 \\ -7 & -5 \end{bmatrix}
+    \begin{bmatrix} x \\ y \end{bmatrix}
+    & = \begin{bmatrix} 3 & 2 \\ -7 & -5 \end{bmatrix}^{-1}
+    \begin{bmatrix} 2 \\ 4 \end{bmatrix} \\
+    \symbf{I}_2
+    \begin{bmatrix} x \\ y \end{bmatrix}
+    & = \begin{bmatrix} 5 & 2 \\ -7 & -3 \end{bmatrix}
+    \begin{bmatrix} 2 \\ 4 \end{bmatrix} \\
+    \begin{bmatrix} x \\ y \end{bmatrix}
+    & = \begin{bmatrix} 18 \\ -26 \end{bmatrix} \\
+\end{align*}
 
 * Methods of Matrix Inversion
 
+** General Definition
+
+*** Matrix Inverse
+:PROPERTIES:
+    :BEAMER_env: definition
+:END:
+
+$A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
+
+*** The Rest :ignore:
+
+- If $\det(A)$ then the inverse is undefined.
+
 ** Gauss-Jordan Method
+
+*** Operations
+
+1. Swap any two rows: $swap(R_i, R_j)$
+2. Multiply any row by a non-zero value: $c \times R_i$
+3. Add to any row a multiple of another row: $R_i + c \times R_j$
 
 * Class Activity
 
@@ -190,7 +232,7 @@ The _identity_ of an operation $\star$ and set $G$ is some value $\symbfit{i} \i
 
 * GPU Programming
 
-** SIMD
+** SM Architecture
 
 ** CUDA
 
