--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -119,7 +119,10 @@ The _inverse_ of $a$ is some value $a^{-1}$ such that $a \star a^{-1} = \symbfit
 
 The _identity_ of an operation $\star$ and set $G$ is some value $\symbfit{i} \in G$ where for all $a \in G$, $\symbfit{i} \star a = a \star \symbfit{i} = a$.
 
-*** The Rest :ignore:
+*** The Rest
+:PROPERTIES:
+:BEAMER_env: ignoreheading
+:END:
 
 #+ATTR_BEAMER: :overlay <3->
 - For example, the set and operation $(\symbb{R}, \times)$ has the identity $\symbfit{i} = 1$ since $1 \times x = x \times 1 = x$ for all $x \in \symbb{R}$.
@@ -164,7 +167,10 @@ The _identity_ of an operation $\star$ and set $G$ is some value $\symbfit{i} \i
 
 $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
 
-*** The Rest :ignore:
+*** The Rest
+:PROPERTIES:
+:BEAMER_env: ignoreheading
+:END:
 
 - If $\det(A)$ then the inverse is undefined.
 
