--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -311,19 +311,66 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
     :BEAMER_col: 0.40
 :END:
 
-#+ATTR_BEAMER: :overlay <1->
+#+ATTR_BEAMER: :overlay <only@1-2>
 - Multiprocessor (MP)
   - A "core" that handles simultaneous execution of a vector of tasks
-#+ATTR_BEAMER: :overlay <2->
+#+ATTR_BEAMER: :overlay <only@2>
 - Scalar processor (SP)
   - Executes a single scalar component
 #+ATTR_BEAMER: :overlay <3->
 - Warp
   - Group of SPs in a MP that execute in lockstep
   - Warps share registers; including the program counter
+- Kernel
+  - Group of warps that operate on the same method
 
+** Basic CUDA Program
+*** Code
+:PROPERTIES:
+    :BEAMER_col: 0.55
+:END:
 
-** CUDA
+#+ATTR_LATEX: :options fontsize=\footnotesize,linenos=true,xleftmargin=0.5cm
+#+BEGIN_SRC cuda
+// A special method invoked by the
+// CPU to launch a GPU kernel
+__global__ print(string message) {
+    int idx = threadIdx.x;
+    int jdx = blockIdx.x;
+    printf("%s from (%d, %d)\n",
+           message, jdx, idx);
+}
+
+// Standard C main
+int main() {
+    // Call kernel launcher
+    print<<<2, 4>>>("Hello World");
+    // Wait for GPU to finish
+    cudaDeviceSynchronize();
+}
+#+END_SRC
+
+*** Output
+:PROPERTIES:
+    :BEAMER_col: 0.45
+    :BEAMER_env: block
+:END:
+
+Hello World from (0, 0)
+
+Hello World from (0, 3)
+
+Hello World from (1, 2)
+
+Hello World from (1, 0)
+
+Hello World from (0, 2)
+
+Hello World from (1, 1)
+
+Hello World from (1, 3)
+
+Hello World from (0, 1)
 
 ** Thread-Data Remapping
 
