--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -220,7 +220,7 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
         0 & 2 & 1 & 0 & 1 & 0 \\
         1 & 1 & 1 & 0 & 0 & 1
     \end{bNiceArray}}
-    \onslide<3->{& \xrightarrow[R_2 - 1 R_0]{R_1 - 0R_0} &
+    \onslide<3->{& \xrightarrow[R_2 - 1 R_0]{R_1 - 0R_0}
     \begin{bNiceArray}{ccc|ccc}
         1 & 0 & 1 & 1 & 0 & 0 \\
         \symbf{0} & \symbf{2} & \symbf{1} & \symbf{0} & \symbf{1} & \symbf{0} \\
@@ -232,7 +232,7 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
         \symbf{0} & \symbf{1} & \symbf{\sfrac{1}{2}} & \symbf{0} & \symbf{\sfrac{1}{2}} & \symbf{0} \\
         0 & 1 & 0 & -1 & 0 & 1
     \end{bNiceArray}}
-    \onslide<5->{& \xrightarrow[R_2 - 1 R_1]{R_0 - 0R_1} &
+    \onslide<5->{& \xrightarrow[R_2 - 1 R_1]{R_0 - 0R_1}
     \begin{bNiceArray}{ccc|ccc}
         \symbf{1} & \symbf{0} & \symbf{1} & \symbf{1} & \symbf{0} & \symbf{0} \\
         0 & 1 & \sfrac{1}{2} & 0 & \sfrac{1}{2} & 0 \\
@@ -244,7 +244,7 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
         0 & 1 & \sfrac{1}{2} & 0 & \sfrac{1}{2} & 0 \\
         \symbf{0} & \symbf{0} & \symbf{1} & \symbf{2} & \symbf{1} & -\symbf{2}
     \end{bNiceArray}}
-    \onslide<7->{& \xrightarrow[R_1 - \sfrac{1}{2} R_2]{R_0 - 1R_2} &
+    \onslide<7->{& \xrightarrow[R_1 - \sfrac{1}{2} R_2]{R_0 - 1R_2}
     \begin{bNiceArray}{ccc|ccc}
         \symbf{1} & \symbf{0} & \symbf{0} & -\symbf{1} & -\symbf{1} & \symbf{2} \\
         \symbf{0} & \symbf{1} & \symbf{0} & -\symbf{1} & \symbf{0} & \symbf{1} \\
