--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -197,6 +197,33 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
 2. Multiply any row by a non-zero value: $c \times R_i$
 3. Add to any row a multiple of another row: $R_i + c \times R_j$
 
+*** Examples
+:PROPERTIES:
+    :BEAMER_env: ignoreheading
+:END:
+
+\begin{align*}
+    \onslide<2->{\begin{bNiceArray}{cc|cc}
+        3 & 2 & 1 & 0 \\
+        -7 & -5 & 0 & 1
+    \end{bNiceArray}
+    \xrightarrow{R_0 \leftrightarrow R_1}
+    \begin{bNiceArray}{cc|cc}
+        -7 & -5 & 0 & 1 \\
+        3 & 2 & 1 & 0
+    \end{bNiceArray}}
+    \onslide<3->{\xrightarrow{R_1 \times 2}
+    \begin{bNiceArray}{cc|cc}
+        -7 & -5 & 0 & 1 \\
+        6 & 4 & 2 & 0
+    \end{bNiceArray}}
+    \onslide<4->{\xrightarrow{R_0 + \sfrac{1}{2} R_1}
+    \begin{bNiceArray}{cc|cc}
+        -4 & -3 & -1 & 1 \\
+        6 & 4 & 2 & 0
+    \end{bNiceArray}}
+\end{align*}
+
 * Class Activity
 
 ** Matrix Example
