Revert "Add Hack font as build input"
This reverts commit 235858b185e86912b4be56b85b5fda3838671e47.

--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -86,7 +86,7 @@ Fancy fractions
 
 #+BEAMER_HEADER: \setmathfont{Fira Math}
 #+BEAMER_HEADER: \setmathfont{TeX Gyre DejaVu Math}[range={\vysmwhtcircle,\times,\vdots,\star}]
-#+BEAMER_HEADER: \setmonofont{Hack}
+/#+BEAMER_HEADER: \setmonofont{Hack}
 
 *** Citations
 
