--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -429,6 +429,18 @@ Hello World from (1, 3)
 
 Hello World from (0, 1)
 
+** CUDA Matrix Inversion: CPU Loop
+
+#+ATTR_LATEX: :options fontsize=\footnotesize,linenos=true,xleftmargin=0.5cm
+#+BEGIN_SRC cuda
+for (size_t j = 0; j < rows; j++) {
+  fixRow<<<1, cols>>>(data_gpu, cols, j);
+  auto_throw(cudaDeviceSynchronize());
+
+  fixColumn<<<rows, cols>>>(data_gpu, cols, j);
+  auto_throw(cudaDeviceSynchronize());
+}
+#+END_SRC
 
 ** CUDA Matrix Inversion: FixRow
 
@@ -472,19 +484,6 @@ __global__ void fixColumn(
     colj[i] = colj[i] - AColIdj * col[i];
   }
   matrix[i * size + j] = colj[i];
-}
-#+END_SRC
-
-** CUDA Matrix Inversion: CPU Loop
-
-#+ATTR_LATEX: :options fontsize=\footnotesize,linenos=true,xleftmargin=0.5cm
-#+BEGIN_SRC cuda
-for (size_t j = 0; j < rows; j++) {
-  fixRow<<<1, aug_cols>>>(data_gpu, aug_cols, j);
-  auto_throw(cudaDeviceSynchronize());
-
-  fixColumn<<<rows, aug_cols>>>(data_gpu, aug_cols, j);
-  auto_throw(cudaDeviceSynchronize());
 }
 #+END_SRC
 
