--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -26,7 +26,7 @@
 ** Emacs Config
 #+startup: beamer show2levels
 
-#+BEGIN_SRC emacs-lisp :exports none :eval always
+#+begin_src emacs-lisp :exports results :results none :eval export
   (require 'ox-extra)
   (ox-extras-activate '(ignore-headlines))
 
