--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -123,7 +123,7 @@ Tight Align
 Algorithm
 #+LATEX_HEADER: \usepackage{algorithm2e}
 
-* Introduction to Inverses
+* Introduction to Inverses :noexport:
 
 ** What Is An Inverse?
 
