--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -212,7 +212,7 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
 :END:
 
 \begin{talign*}
-    \det \left(\begin{bmatrix} a & b \\ c & d \end{bmatrix}\right) = ad - bc
+    \det \left(\begin{bmatrix} a & b \\ c & d \end{bmatrix}\right) & = ad - bc
 \end{talign*}
 
 *** Adjugate: $\text{adj}(\symbb{R}^{n \times n}) \to \symbb{R}^{n \times n}$
@@ -235,19 +235,27 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
 
 ** Gauss-Jordan Method
 
+*** Augmented Matrix
+
+\begin{talign*}
+    \text{aug}\left(A\right) = A @ \symbf{I} =
+    \begin{bNiceArray}{cc|cc}
+        a & b & 1 & 0 \\
+        c & d & 0 & 1
+    \end{bNiceArray}
+\end{talign*}
+
 *** Operations
+:PROPERTIES:
+    :BEAMER_act: <2->
+:END:
 
 1. Swap any two rows: $swap(R_i, R_j)$
 2. Multiply any row by a non-zero value: $c \times R_i$
 3. Add to any row a multiple of another row: $R_i + c \times R_j$
 
-*** Examples
-:PROPERTIES:
-    :BEAMER_env: ignoreheading
-:END:
-
-\begin{align*}
-    \onslide<2->{\begin{bNiceArray}{cc|cc}
+\begin{talign*}
+    \onslide<3->{\begin{bNiceArray}{cc|cc}
         3 & 2 & 1 & 0 \\
         -7 & -5 & 0 & 1
     \end{bNiceArray}
@@ -256,17 +264,17 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
         -7 & -5 & 0 & 1 \\
         3 & 2 & 1 & 0
     \end{bNiceArray}}
-    \onslide<3->{\xrightarrow{R_1 \times 2}
+    \onslide<4->{\xrightarrow{R_1 \times 2}
     \begin{bNiceArray}{cc|cc}
         -7 & -5 & 0 & 1 \\
         6 & 4 & 2 & 0
     \end{bNiceArray}}
-    \onslide<4->{\xrightarrow{R_0 + \sfrac{1}{2} R_1}
+    \onslide<5->{\xrightarrow{R_0 + \sfrac{1}{2} R_1}
     \begin{bNiceArray}{cc|cc}
         -4 & -3 & -1 & 1 \\
         6 & 4 & 2 & 0
     \end{bNiceArray}}
-\end{align*}
+\end{talign*}
 
 ** Gauss-Jordan Algorithm
 
