--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -280,21 +280,41 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
 
 \begin{algorithm}[H]
     \KwData{$M$ is a matrix with $N$ rows}
-    $i \gets 0$\;
-    \While{$i < N$}{
-        \ForEach{$M_{ij}$ in $M_i$}{
-            $M_{ij} \gets M_{ij} / M_{ii}$\;
-        }
+    \ForEach{row $M_i$}{
+        $M_i \gets M_i / M_{ii}$\;
 
-        \ForEach{$M_k$ in $M$ where $k \neq i$}{
-            \ForEach{$M_{kj}$ in $M_k$}{
-                $M_{kj} \gets M_{kj} - M_{ki} \times M_{ij}$\;
-            }
+        \ForEach{row $M_j$ in $M$ where $j \neq i$}{
+            $M_j \gets M_j - M_{ji} \times M_i$
         }
-
-        $i \gets i + 1$\;
     }
 \end{algorithm}
+
+\begin{talign*}
+    \onslide<2->{\begin{bNiceArray}{cc|cc}
+        3 & 2 & 1 & 0 \\
+        -7 & -5 & 0 & 1
+    \end{bNiceArray}}
+    \onslide<3->{& \xrightarrow{R_0 / 3}
+    \begin{bNiceArray}{cc|cc}
+        \symbf{1} & \symbf{\sfrac{2}{3}} & \symbf{\sfrac{1}{3}} & \symbf{0} \\
+        -7 & -5 & 0 & 1
+    \end{bNiceArray}}
+    \onslide<4->{& \xrightarrow{R_1 - (-7) R_0}
+    \begin{bNiceArray}{cc|cc}
+        1 & \sfrac{2}{3} & \sfrac{1}{3} & 0 \\
+        \symbf{0} & -\symbf{\sfrac{1}{3}} & \symbf{\sfrac{7}{3}} & \symbf{1}
+    \end{bNiceArray} \\}
+    \onslide<5->{& \xrightarrow{R_1 / -\sfrac{1}{3}}
+    \begin{bNiceArray}{cc|cc}
+        1 & \sfrac{2}{3} & \sfrac{1}{3} & 0 \\
+        \symbf{0} & \symbf{1} & -\symbf{7} & -\symbf{3}
+    \end{bNiceArray}}
+    \onslide<6->{& \xrightarrow{R_0 - \sfrac{2}{3} R_1}
+    \begin{bNiceArray}{cc|cc}
+        \symbf{1} & \symbf{0} & \symbf{5} & \symbf{2} \\
+        0 & 1 & -7 & - 3
+    \end{bNiceArray}}
+\end{talign*}
 
 * Class Activity
 
