--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -203,7 +203,9 @@ The _identity_ of an operation $\star$ and set $G$ is some value $\symbfit{i} \i
 
 Let $A$ be an $n \times n$ matrix,
 
-$A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
+\begin{talign*}
+    A^{-1} = \frac{1}{\det(A)} \text{adj}(A)
+\end{talign*}
 
 **** Determinate: $\det(\symbb{R}^{n \times n}) \to \symbb{R}$
 :PROPERTIES:
@@ -294,22 +296,22 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
         3 & 2 & 1 & 0 \\
         -7 & -5 & 0 & 1
     \end{bNiceArray}}
-    \onslide<3->{& \xrightarrow{R_0 / 3}
+    \onslide<3->{& \xrightarrow{R_0 / 3} &
     \begin{bNiceArray}{cc|cc}
         \symbf{1} & \symbf{\sfrac{2}{3}} & \symbf{\sfrac{1}{3}} & \symbf{0} \\
         -7 & -5 & 0 & 1
     \end{bNiceArray}}
-    \onslide<4->{& \xrightarrow{R_1 - (-7) R_0}
+    \onslide<4->{& \xrightarrow{R_1 - (-7) R_0} &
     \begin{bNiceArray}{cc|cc}
         1 & \sfrac{2}{3} & \sfrac{1}{3} & 0 \\
         \symbf{0} & -\symbf{\sfrac{1}{3}} & \symbf{\sfrac{7}{3}} & \symbf{1}
     \end{bNiceArray} \\}
-    \onslide<5->{& \xrightarrow{R_1 / -\sfrac{1}{3}}
+    \onslide<5->{& \xrightarrow{R_1 / -\sfrac{1}{3}} &
     \begin{bNiceArray}{cc|cc}
         1 & \sfrac{2}{3} & \sfrac{1}{3} & 0 \\
         \symbf{0} & \symbf{1} & -\symbf{7} & -\symbf{3}
     \end{bNiceArray}}
-    \onslide<6->{& \xrightarrow{R_0 - \sfrac{2}{3} R_1}
+    \onslide<6->{& \xrightarrow{R_0 - \sfrac{2}{3} R_1} &
     \begin{bNiceArray}{cc|cc}
         \symbf{1} & \symbf{0} & \symbf{5} & \symbf{2} \\
         0 & 1 & -7 & - 3
@@ -319,15 +321,20 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
 * Class Activity
 
 ** Matrix Example
+:PROPERTIES:
+    :BEAMER_opt: c
+:END:
 
-#+LATEX: \centering
 \begin{align*}
     M & = \begin{bmatrix} 1 & 0 & 1 \\ 0 & 2 & 1 \\ 1 & 1 & 1 \end{bmatrix} \\
 \end{align*}
 
 ** Solution
+:PROPERTIES:
+    :BEAMER_opt: c
+:END:
 
-\begin{align*}
+\begin{talign*}
     \begin{bNiceArray}{ccc|ccc}
         1 & 0 & 1 & 1 & 0 & 0 \\
         0 & 2 & 1 & 0 & 1 & 0 \\
@@ -369,7 +376,7 @@ $A^{-1} = \frac{1}{\det(A)} \text{adj}(A)$
         \symbf{0} & \symbf{1} & \symbf{0} & -\symbf{1} & \symbf{0} & \symbf{1} \\
         0 & 0 & 1 & 2 & 1 & -2
     \end{bNiceArray}}
-\end{align*}
+\end{talign*}
 
 * GPU Programming
 
