--- a/Presentation/Presentation.org
+++ b/Presentation/Presentation.org
@@ -204,7 +204,8 @@ The _identity_ of an operation $\star$ and set $G$ is some value $\symbfit{i} \i
 Let $A$ be an $n \times n$ matrix,
 
 \begin{talign*}
-    A^{-1} = \frac{1}{\det(A)} \text{adj}(A)
+    A A^{-1} & = \symbf{I} \\
+    A^{-1} & = \frac{1}{\det(A)} X
 \end{talign*}
 
 **** Determinate: $\det(\symbb{R}^{n \times n}) \to \symbb{R}$
@@ -217,7 +218,7 @@ Let $A$ be an $n \times n$ matrix,
     \det \left(\begin{bmatrix} a & b \\ c & d \end{bmatrix}\right) & = ad - bc
 \end{talign*}
 
-*** Adjugate: $\text{adj}(\symbb{R}^{n \times n}) \to \symbb{R}^{n \times n}$
+*** Value of X
 :PROPERTIES:
     :BEAMER_env: block
     :BEAMER_col: 0.50
@@ -225,9 +226,13 @@ Let $A$ be an $n \times n$ matrix,
 :END:
 
 \begin{talign*}
-    A \cdot \text{adj}\left(A\right) & = \det(A) \cdot \symbf{I} \\
+    A \cdot X\left(A\right) & = \det(A) \cdot \symbf{I} \\
     \onslide<4->{& = \begin{bmatrix} \det(A) & 0 \\ 0 & \det(A) \end{bmatrix} \\}
-    \onslide<5->{& = \begin{bmatrix} ad - bc & 0 \\ 0 & ad - bc \end{bmatrix} \\}
+    \onslide<5->{
+        \begin{bmatrix} a & b \\ c & d \end{bmatrix}
+        \begin{bmatrix} x_1 & x_2 \\ x_3 & x_4 \end{bmatrix}
+        & = \begin{bmatrix} ad - bc & 0 \\ 0 & ad - bc \end{bmatrix} \\
+    }
     \onslide<6->{
         \begin{bmatrix} a & b \\ c & d \end{bmatrix}
         \begin{bmatrix} d & -b \\ -c & a \end{bmatrix}
@@ -240,7 +245,7 @@ Let $A$ be an $n \times n$ matrix,
 *** Augmented Matrix
 
 \begin{talign*}
-    \text{aug}\left(A\right) = A @ \symbf{I} =
+    \text{aug}\left(A\right) = A | \symbf{I} =
     \begin{bNiceArray}{cc|cc}
         a & b & 1 & 0 \\
         c & d & 0 & 1
